UI: Fix ugly footer on small screens

--- a/hawk/app/assets/stylesheets/application/_media.scss
+++ b/hawk/app/assets/stylesheets/application/_media.scss
@@ -66,16 +66,3 @@ $sidebar-width: 250px;
       -webkit-transition: all 0.25s ease 0s;
     }
 }
-
-@media screen and (max-width: 992px) {
-  footer {
-    .container-fluid {
-      .row {
-        .copyright,
-        .metadata {
-          text-align: center;
-        }
-      }
-    }
-  }
-}
